test: [Beer Controller] MockMVC Test Create Beer